# projet_MLops_part2

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: CICD.yml
docs/: getstarted.ipynb  optimization_report.ipynb
docs/superpowers/plans/: 2026-05-11-monitoring-page.md
docs/superpowers/specs/: 2026-05-11-monitoring-page-design.md
src/api/: app.py  authentification.py  monitoring.py  prediction.py
src/config/: config.py
src/data/: preprocessing.py
src/models/: export_onnx.py  predict.py
src/utils/: auth.py  database.py  logs.py  monitoring_stats.py
tests/functional/: test_app.py  test_monitoring.py
tests/unit/: test_auth.py  test_database.py  test_logs.py  test_monitoring_stats.py  test_predict.py
